# calibre

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  benchmark.ipynb  citation.cff  pyproject.toml
.github/workflows/: adjacent_repo_recommender.yaml  ci.yml  docs.yml  python-publish.yml
calibre/: __init__.py  base.py  calibration.py  diagnostics.py  metrics.py  utils.py  visualization.py
calibre/calibrators/: __init__.py  cdi_iso.py  isotonic.py  nearly_isotonic.py  regularized.py  relaxed_pava.py  smoothed.py  spline.py
calibre/utils/: __init__.py  array_ops.py  validation.py
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api/: calibrators.rst  index.rst  metrics.rst  utils.rst
docs/source/examples/: advanced_usage.rst  basic_usage.rst  benchmarks.rst  index.rst
docs/source/notebooks/: 01_getting_started.ipynb  02_validation_and_evaluation.ipynb  03_diagnostics_and_troubleshooting.ipynb  04_performance_comparison.ipynb
examples/: README.md  benchmark.ipynb  calibration_validation.ipynb  plateau_diagnostics_demo.ipynb
ms/: calibre.bib  calibre.tex
test_env/: pyvenv.cfg
tests/: __init__.py  conftests.py  data_generators.py  test_calibrators_unit.py  test_comprehensive_matrix.py  test_diagnostics.py  test_integration.py  test_mathematical_properties.py  test_metrics.py  test_properties.py  test_utils.py
tests/validation/: calibration_validation.ipynb
